Add max_toc_depth setting and replace default icon

--- a/material/partials/toc-item.html
+++ b/material/partials/toc-item.html
@@ -2,11 +2,13 @@
   <a href="{{ toc_item.url }}" title="{{ toc_item.title }}" class="md-nav__link">
     {{ toc_item.title }}
   </a>
-  {% if toc_item.children %}
+  {% if level and toc_item.children %}
     <nav class="md-nav">
       <ul class="md-nav__list">
         {% for toc_item in toc_item.children %}
-          {% include "partials/toc-item.html" %}
+          {% with level = level - 1 %}
+            {% include "partials/toc-item.html" %}
+          {% endwith %}
         {% endfor %}
       </ul>
     </nav>
