Adapt other parts of the theme to mkdocs 1.0.4
and some changes made in mkdocs-material since we forked

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -89,7 +89,7 @@
           </div>
         {% endif %}
         powered by
-        <a href="http://www.mkdocs.org">MkDocs</a>
+        <a href="https://www.mkdocs.org">MkDocs</a>
         and
         <a href="https://squidfunk.github.io/mkdocs-material/">
           Material for MkDocs</a>
