--- a/src/assets/stylesheets/layout/_search.scss
+++ b/src/assets/stylesheets/layout/_search.scss
@@ -318,7 +318,7 @@ $md-toggle__search--checked:
     }
 
     // Search icon
-    &[for="search"] {
+    &[for="__search"] {
       top: 0.6rem;
       left: 1rem;
 
@@ -340,7 +340,7 @@ $md-toggle__search--checked:
         left: 1.6rem;
 
         // Show back arrow instead of search icon
-        &[for="search"]::before {
+        &[for="__search"]::before {
           content: "\E5C4"; // arrow_back
 
           // Adjust for RTL languages
