--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,7 +30,7 @@
 
       <!-- Link to home -->
       <div class="md-flex__cell md-flex__cell--shrink">
-        <a href="{{ config.site_url | default(nav.homepage.url, true) }}"
+          <a href="{{ config.site_url | default(nav.homepage.url, true) | url }}"
             title="{{ config.site_name }}"
             class="md-header-nav__button md-logo">
           {% if config.theme.logo.icon %}
@@ -38,7 +38,7 @@
           {% elif config.theme.logo.startswith("http") %}
             <img src="{{ config.theme.logo }}" width="24" height="24" />
           {% else %}
-            <img src="{{ base_url }}/{{ config.theme.logo }}"
+            <img src="{{ config.theme.logo | url }}"
                 width="24" height="24" />
           {% endif %}
         </a>
@@ -47,7 +47,7 @@
       <!-- Button to toggle drawer -->
       <div class="md-flex__cell md-flex__cell--shrink">
         <label class="md-icon md-icon--menu md-header-nav__button"
-            for="drawer"></label>
+            for="__drawer"></label>
       </div>
 
       <!-- Header title -->
@@ -74,7 +74,7 @@
         {% block search_box %}
           {% if "search" in config["plugins"] %}
             <label class="md-icon md-icon--search md-header-nav__button"
-                for="search"></label>
+                for="__search"></label>
 
             <!-- Search interface -->
             {% include "partials/search.html" %}
