--- a/src/partials/tabs-item.html
+++ b/src/partials/tabs-item.html
@@ -25,12 +25,12 @@
 {% if nav_item.is_homepage %}
   <li class="md-tabs__item">
     {% if not page.ancestors | length and nav | selectattr("url", page.url) %}
-      <a href="{{ nav_item.url|url }}" title="{{ nav_item.title }}"
+      <a href="{{ nav_item.url | url }}" title="{{ nav_item.title }}"
           class="md-tabs__link md-tabs__link--active">
         {{ nav_item.title }}
       </a>
     {% else %}
-      <a href="{{ nav_item.url|url }}" title="{{ nav_item.title }}"
+      <a href="{{ nav_item.url | url }}" title="{{ nav_item.title }}"
           class="md-tabs__link">
         {{ nav_item.title }}
       </a>
@@ -42,7 +42,7 @@
   {% set title = title | default(nav_item.title) %}
 
   <!-- Recurse, if the first item has nested items -->
-  {% if (nav_item.children | first).children | length > 0 %}
+  {% if (nav_item.children | first).children %}
     {% set nav_item = nav_item.children | first %}
     {% include "partials/tabs-item.html" %}
 
@@ -50,12 +50,12 @@
   {% else %}
     <li class="md-tabs__item">
       {% if nav_item.active %}
-        <a href="{{ (nav_item.children | first).url|url }}"
+        <a href="{{ (nav_item.children | first).url | url }}"
             title="{{ title }}" class="md-tabs__link md-tabs__link--active">
           {{ title }}
         </a>
       {% else %}
-        <a href="{{ (nav_item.children | first).url|url }}"
+        <a href="{{ (nav_item.children | first).url | url }}"
             title="{{ title }}" class="md-tabs__link">
           {{ title }}
         </a>
