--- a/src/partials/toc-item.html
+++ b/src/partials/toc-item.html
@@ -23,7 +23,7 @@
 
 <!-- Table of contents item -->
 <li class="md-nav__item">
-  <a href="{{ toc_item.url|url }}" title="{{ toc_item.title }}"
+    <a href="{{ toc_item.url }}" title="{{ toc_item.title }}"
       class="md-nav__link">
     {{ toc_item.title }}
   </a>
